--- a/css/style.css
+++ b/css/style.css
@@ -159,18 +159,19 @@ section {
   border-top-right-radius: 4px;
   height: 180px;
   width: 260px;
-  object-fit: cover; /* evita a deformação de imagens, as img terão a mesma proporção estabelecida acima */ 
-  object-position: left bottom;
+  object-fit: cover;
+  object-position: center;
   transition: 500ms;
 }
 
+.img-projects:hover,
 .img-projects:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .icons a {
   color: black;
-  font-size: 6em;
+  font-size: 10em;
   text-decoration: none;
   transition: .3s;
 }
@@ -181,5 +182,5 @@ section {
 
 .contact a:active,
 .contact a:hover {
-  text-shadow: 0px 10px 20px purple;
+  text-shadow: 0px 10px 20px yellow;
 }
