--- a/css/style.css
+++ b/css/style.css
@@ -27,17 +27,15 @@ header {
     display: flex;
     height: 100vh;
     justify-content: center;
-    
-}
+  }
 
 section {
-  background: transparent;
   text-align: center;
 }
   
 .menu {
-    box-shadow: 0 1px 5px #0000001e;
-    background-color: white;
+    box-shadow: 0 5px 5px #0000001e;
+    background-color: black;
     position: fixed;
     top: 0;
     width: 100vw;
@@ -55,38 +53,47 @@ section {
 }
   
 .menu a {
-    color: black;
+    color: white;
     display: block;
     padding: 10px 20px;
     text-decoration: none;
-    transition: .2s;
+    transition: .1s;
 }
 
 .menu a:active,
 .menu a:hover {
-  font-size: 1.1em;
-  text-shadow: 0px 5px 10px grey;
+  color: snow;
+  text-shadow: 0px 0px 10px white;
+}
+
+.avatar img {
+  /*border-radius: 50%;*/
+  clip-path: polygon(20% 0%, 0 0, 30% 50%, 0 100%, 20% 100%, 49% 100%, 80% 100%, 100% 100%, 70% 50%, 100% 0, 80% 0%, 50% 0);
+
+  height: 200px;
+  width: auto;
 }
 
 .site-title {
     font-size: 4em;
     text-align: center;
+    text-shadow: 0px 1px 10px grey;
 }
 
-.site-subtitle1 {opacity: 0; animation: ease 2s animacaoTitulo forwards;}
+.site-subtitle1 {opacity: 0; animation: ease-in 2s animacaoTitulo forwards;}
 @keyframes animacaoTitulo {100% {transform: scale(1) translateY(0);opacity: 1;}}
-.site-subtitle2 {opacity: 0; animation: ease 4s animacaoTitulo forwards;}
+.site-subtitle2 {opacity: 0; animation: ease-in 4s animacaoTitulo forwards;}
 @keyframes animacaoTitulo {100% {transform: scale(1) translateY(0);opacity: 1;}}
-.site-subtitle3 {opacity: 0; animation: ease 6s animacaoTitulo forwards;}
+.site-subtitle3 {opacity: 0; animation: ease-in 8s animacaoTitulo forwards;}
 @keyframes animacaoTitulo {100% {transform: scale(1) translateY(0);opacity: 1;}}
-.site-subtitle4 {opacity: 0; animation: ease 8s animacaoTitulo forwards;}
+.site-subtitle4 {opacity: 0; animation: ease-in 10s animacaoTitulo forwards;}
 @keyframes animacaoTitulo {100% {transform: scale(1) translateY(0);opacity: 1;}}
 
 .site-subtitle1,
 .site-subtitle2,
 .site-subtitle3,
 .site-subtitle4 {
-  color: rgba(0, 0, 0, 0.247);
+  color: rgba(0, 0, 0, 0.5);
   font-weight: 300;
   text-align: center;
 }
@@ -103,12 +110,56 @@ section {
 }
 
 /* section */
+.about,
+.contact,
 .projects {
   padding: 2em;
+  min-height: 100vh;
 }
 
+@media (min-widht: 1200px) {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+  }
+}
+
+.avatar {
+  float: none;
+  text-align: center;
+}
+
+.about h2,
+.contact h2,
 .projects h2 {
-  padding-bottom: 1.4em;
+  margin-bottom: 1.5em;
+  text-align: center;
+}
+
+.about li {
+  font-style: italic;
+  list-style: none; 
+}
+
+.about-icon {
+  font-size: 2em;
+  text-shadow: 4px 3px 5px grey;
+}
+
+.about-icon-map {color: red;}
+.about-icon-graduation {color: black;}
+.about-icon-building {color: rgba(0, 0, 0, 0.7);}
+
+.about a,
+.about li {
+  color: rgba(0, 0, 0, 0.7);  
+  text-decoration:none;
+}
+
+.about a:hover {
+  color: black;
+  text-shadow: 0px 0px 10px grey;
 }
 
 .projects .grid {
@@ -139,10 +190,10 @@ section {
   width: 260px;
   padding-bottom: 20px;
   border-radius: 5px;
-  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.247);
+  box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.247);
 }
 
-.projects figcaption{
+.projects figcaption {
   font-weight: 500;
   text-align: center;
 }
@@ -158,29 +209,32 @@ section {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   height: 180px;
-  width: 260px;
+  width: 100%;
   object-fit: cover;
   object-position: center;
   transition: 500ms;
 }
 
-.img-projects:hover,
+.img-projects:active,
 .img-projects:hover {
+  border-radius: 50%;
   transform: scale(1.05);
 }
 
 .icons a {
-  color: black;
-  font-size: 10em;
+  color: white;
+  font-size: 5em;
   text-decoration: none;
   transition: .3s;
 }
 
 .contact div {
+  background-color: black;
   text-align: center;
 }
 
 .contact a:active,
 .contact a:hover {
-  text-shadow: 0px 10px 20px yellow;
+  color: blanchedalmond;
+  text-shadow: 0px 0px 10px white;
 }
