--- a/css/style.css
+++ b/css/style.css
@@ -2,154 +2,101 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-body {
-    background-color: whitesmoke;
-    font-family: 'Roboto', sans-serif;
-    height: 100vh;
-}
-  
-@media (min-width: 400px) {
-body {
-      font-size: 18px;
-    }
-}
-  
-@media (min-width: 600px) {
-body {
-      font-size: 22px;
-    }
-}
-  
-header {
-    align-items: center;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-  }
-
-section {
   text-align: center;
 }
-  
+
+body {
+  background-color: white;
+  font-family: 'Roboto', sans-serif;
+  height: 100vh;
+}
+
+header {
+  align-items: center;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+}
+
 .menu {
-    box-shadow: 0 5px 5px #0000001e;
-    background-color: black;
-    position: fixed;
-    top: 0;
-    width: 100vw;
-    z-index: 1;
+  box-shadow: 0px 5px 5px #0000001e;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  z-index: 1;
 }
-  
+
 .menu ul {
-    align-items: center;
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
-  
+
 .menu li {
-   list-style: none; 
+  list-style: none;
 }
-  
+
 .menu a {
-    color: white;
-    display: block;
-    padding: 10px 20px;
-    text-decoration: none;
-    transition: .1s;
+  color: white;
+  display: block;
+  padding: 10px 20px;
+  text-decoration: none;
+  transition: .1s;
 }
 
 .menu a:active,
 .menu a:hover {
-  color: snow;
-  text-shadow: 0px 0px 10px white;
+color: black;
+text-shadow: 0px 0px 1px white;
 }
 
-.avatar img {
-  /*border-radius: 50%;*/
-  clip-path: polygon(20% 0%, 0 0, 30% 50%, 0 100%, 20% 100%, 49% 100%, 80% 100%, 100% 100%, 70% 50%, 100% 0, 80% 0%, 50% 0);
-
-  height: 200px;
-  width: auto;
+.titles h1 {
+  font-size: 5em;
 }
 
-.site-title {
-    font-size: 4em;
-    text-align: center;
-  }
+.titles h2,
+.titles h3,
+.titles h4,
+.titles h5 {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 2em;
+  font-weight: lighter;
+}
 
-.site-subtitle1 {
+.titles h2 {
   opacity: 0; animation: ease-out 2s animacaoTitulo forwards;
 }@keyframes animacaoTitulo {100% {transform: scale(1) translateY(0);opacity: 1;}}
 
-.site-subtitle2 {
+.titles h3 {
   opacity: 0; animation: ease-out 4s animacaoTitulo forwards;
 }@keyframes animacaoTitulo {100% {transform: scale(1) translateY(0);opacity: 1;}}
 
-.site-subtitle3 {
+.titles h4 {
   opacity: 0; animation: ease-out 8s animacaoTitulo forwards;
 }@keyframes animacaoTitulo {100% {transform: scale(1) translateY(0);opacity: 1;}}
 
-.site-subtitle4 {
+.titles h5 {
   opacity: 0; animation: ease-out 10s animacaoTitulo forwards;
 }@keyframes animacaoTitulo {100% {transform: scale(1) translateY(0);opacity: 1;}}
 
-.site-subtitle1,
-.site-subtitle2,
-.site-subtitle3,
-.site-subtitle4 {
-  color: rgba(0, 0, 0, 0.5);
-  font-weight: 300;
-  text-align: center;
-}
-
-.down-arrow {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 38px;
-}
-
-#img-down-arrow {
-  height: 30px;
-  width: 30px;
-}
-
-/* section */
+/*Início About*/
 .about,
-.contact,
-.projects {
+.projects{
   padding: 2em;
   min-height: 100vh;
-}
-
-@media (min-widht: 1200px) {
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1200px;
-  }
-}
-
-.avatar {
-  float: none;
-  text-align: center;
 }
 
 .about h2,
 .contact h2,
 .projects h2 {
-  margin-bottom: 1.5em;
-  text-align: center;
-}
-
-.about li {
-  list-style: none; 
-}
-
-.about-icon {
   font-size: 2em;
-  text-shadow: 4px 3px 5px grey;
+  margin-top: .5em;
+  margin-bottom: 1.5em;
+}
+
+.about ul {
+  font-size: 1.5em;
+  padding-bottom: 2em
 }
 
 .about-icon-map {color: darkred;}
@@ -162,29 +109,30 @@ section {
   text-decoration:none;
 }
 
-.about-icon {
-  transform: translateY(-100vh); animation: 1s animacaoAbout forwards;
-}
-@keyframes animacaoAbout {
-  to {
-    transform: translate(0);
-  }
-}
-
 .about a:hover {
   color: black;
   text-shadow: 0px 0px 10px grey;
+}
+
+.about li {
+  list-style: none;
+}
+
+.about-icon {
+  font-size: 2em;
+  text-shadow: 4px 3px 5px grey;
+}
+/*Fim About*/
+
+/*Início Projects*/
+.projects h2 {
+  font-size: 2em;
 }
 
 .projects .grid {
   display: grid;
   gap: 2em 4em;
   justify-content: center;
-}
-
-.projects a {
-  text-decoration: none;
-  color: inherit;
 }
 
 @media (min-width: 560px) {
@@ -199,29 +147,25 @@ section {
   }
 }
 
-/* imagens da section */
 .projects figure {
-  width: 260px;
-  padding-bottom: 20px;
   border-radius: 5px;
   box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.247);
+  padding-bottom: 20px;
+  width: 260px;
 }
 
 .projects figcaption {
-  font-weight: 500;
-  text-align: center;
+  font-weight: bold;
 }
 
 .projects figure p {
   padding: 5px;
-  font-size: 13px;
-  font-weight: 300;
-  text-align: center;
+  font-weight: lighter;
 }
 
 .img-projects {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  border-radius: 100%;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.247);
   height: 180px;
   width: 100%;
   object-fit: cover;
@@ -229,26 +173,73 @@ section {
   transition: 500ms;
 }
 
+.projects a,
+.projects figcaption,
+.projects p {
+  color: rgba(0, 0, 0, 0.8);  
+  text-decoration: none;
+}
+
 .img-projects:active,
 .img-projects:hover {
-  border-radius: 50%;
-  transform: scale(1.05);
+  border-radius: 5px;
+  box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.247);
+}
+
+.link:hover {
+  color: black;
+}
+
+div:hover {
+  color: black;
+}
+/*Fim Projects*/
+
+/*Início Contato*/
+
+footer {
+  align-items: center;
+  justify-content: space-around;
+}
+
+.footer {
+  background-color: white;
+  bottom: 0;
+  box-shadow: 0px -1px 5px grey;
+  position: fixed;
+  width: 100vw;
+  z-index: 1;
+}
+
+.footer ul {
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer li {
+  list-style: none;
+}
+
+.footer {
+  font-size: 1.5em;
 }
 
 .icons a {
-  color: white;
-  font-size: 5em;
+  color: black;
   text-decoration: none;
-  transition: .3s;
-}
-
-.contact div {
-  background-color: black;
-  text-align: center;
+  transition: 500ms;
 }
 
 .contact a:active,
 .contact a:hover {
-  color: blanchedalmond;
-  text-shadow: 0px 0px 10px white;
+  background-color: black;
+  color: white;
 }
+
+span {
+  color: white;
+  font-size: .5em;
+  justify-content: space-evenly;
+}
+/*Fim Contato*/
