--- a/css/style.css
+++ b/css/style.css
@@ -5,21 +5,35 @@
   text-align: center;
 }
 
+/*Setas início*/
+.down-arrow,.down-arrow2,.topo-arrow {
+  color: black;font-size: 1.5em;}
+.down-arrow {bottom: 0;position: absolute;}
+
+.down-arrow:hover,
+.down-arrow2:hover,
+.topo-arrow:hover {
+  background-color: black;
+  border-radius: 20px;
+  color: white;
+}
+/*Setas Fim*/
+
 body {
-  background-color: white;
   font-family: 'Roboto', sans-serif;
   height: 100vh;
 }
 
 header {
   align-items: center;
+  background-color: white;
   display: flex;
   height: 100vh;
   justify-content: center;
 }
 
 .menu {
-  box-shadow: 0px 5px 5px #0000001e;
+  box-shadow: 0px 1px 5px grey;
   background-color: black;
   position: fixed;
   top: 0;
@@ -41,16 +55,18 @@ header {
   display: block;
   padding: 10px 20px;
   text-decoration: none;
-  transition: .1s;
+  transition: 1s;
 }
 
 .menu a:active,
 .menu a:hover {
-color: black;
-text-shadow: 0px 0px 1px white;
+  background-color: white;
+  border-radius: 20px;
+  color: black;
 }
 
 .titles h1 {
+  color: black;
   font-size: 5em;
 }
 
@@ -58,26 +74,36 @@ text-shadow: 0px 0px 1px white;
 .titles h3,
 .titles h4,
 .titles h5 {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.6);
   font-size: 2em;
   font-weight: lighter;
 }
 
 .titles h2 {
-  opacity: 0; animation: ease-out 2s animacaoTitulo forwards;
-}@keyframes animacaoTitulo {100% {transform: scale(1) translateY(0);opacity: 1;}}
+opacity: 0; animation: ease-out 3s animacaoTitulo infinite alternate;}
+@keyframes animacaoTitulo{100% {opacity: 1;}}
 
 .titles h3 {
-  opacity: 0; animation: ease-out 4s animacaoTitulo forwards;
-}@keyframes animacaoTitulo {100% {transform: scale(1) translateY(0);opacity: 1;}}
-
+opacity: 0; animation: ease 3s animacaoTitulo infinite alternate;}
+@keyframes animacaoTitulo{100% {opacity: 1;}}
+  
 .titles h4 {
-  opacity: 0; animation: ease-out 8s animacaoTitulo forwards;
-}@keyframes animacaoTitulo {100% {transform: scale(1) translateY(0);opacity: 1;}}
+opacity: 0; animation: ease-in-out 3s animacaoTitulo infinite alternate;}
+@keyframes animacaoTitulo{100% {opacity: 1;}}
 
 .titles h5 {
-  opacity: 0; animation: ease-out 10s animacaoTitulo forwards;
-}@keyframes animacaoTitulo {100% {transform: scale(1) translateY(0);opacity: 1;}}
+opacity: 0; animation: ease-in 3s animacaoTitulo infinite alternate;}
+@keyframes animacaoTitulo{100% {opacity: 1;}}
+
+.contact a:active,
+.contact a:hover {
+  background-color: black;
+  border-radius: 20px;
+  color: white;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 
 /*Início About*/
 .about,
@@ -99,19 +125,25 @@ text-shadow: 0px 0px 1px white;
   padding-bottom: 2em
 }
 
-.about-icon-map {color: darkred;}
-.about-icon-graduation {color: black;}
-.about-icon-building {color: rgba(0, 0, 0, 0.7);}
+.fa-map-marker-alt {
+  color: black;
+  animation: map 2s infinite alternate;}
+  @keyframes map {
+    100% {
+      color: red;
+    }
+  }
 
 .about a,
 .about li {
-  color: rgba(0, 0, 0, 0.7);  
+  color: black;  
   text-decoration:none;
 }
 
 .about a:hover {
-  color: black;
-  text-shadow: 0px 0px 10px grey;
+  background-color: black;
+  border-radius: 20px;
+  color: white;
 }
 
 .about li {
@@ -149,7 +181,7 @@ text-shadow: 0px 0px 1px white;
 
 .projects figure {
   border-radius: 5px;
-  box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.247);
+  box-shadow: 0px 5px 20px black;
   padding-bottom: 20px;
   width: 260px;
 }
@@ -164,8 +196,7 @@ text-shadow: 0px 0px 1px white;
 }
 
 .img-projects {
-  border-radius: 100%;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.247);
+  border-radius: 4px;
   height: 180px;
   width: 100%;
   object-fit: cover;
@@ -180,18 +211,9 @@ text-shadow: 0px 0px 1px white;
   text-decoration: none;
 }
 
-.img-projects:active,
-.img-projects:hover {
-  border-radius: 5px;
-  box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.247);
-}
-
-.link:hover {
-  color: black;
-}
-
-div:hover {
-  color: black;
+.projects figure:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 5px 20px black;
 }
 /*Fim Projects*/
 
@@ -205,28 +227,29 @@ footer {
 .footer {
   background-color: white;
   bottom: 0;
-  box-shadow: 0px -1px 5px grey;
-  position: fixed;
+  box-shadow: 10px -2px 5px grey;
   width: 100vw;
   z-index: 1;
 }
 
 .footer ul {
   align-items: center;
-  display: flex;
-  justify-content: space-around;
+  /*display: flex;
+  justify-content: space-around;*/
 }
 
 .footer li {
+  background-color:white;
   list-style: none;
 }
 
-.footer {
-  font-size: 1.5em;
+.footer i {
+  font-size: 4em;
 }
 
 .icons a {
   color: black;
+  display: block;
   text-decoration: none;
   transition: 500ms;
 }
@@ -234,12 +257,14 @@ footer {
 .contact a:active,
 .contact a:hover {
   background-color: black;
+  border-radius: 20px;
   color: white;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
-span {
+.footer p {
   color: white;
-  font-size: .5em;
   justify-content: space-evenly;
 }
 /*Fim Contato*/
