--- a/css/style.css
+++ b/css/style.css
@@ -234,8 +234,6 @@ footer {
 
 .footer ul {
   align-items: center;
-  /*display: flex;
-  justify-content: space-around;*/
 }
 
 .footer li {
@@ -245,6 +243,11 @@ footer {
 
 .footer i {
   font-size: 4em;
+}
+
+.footer p {
+  color: white;
+  justify-content: space-evenly;
 }
 
 .icons a {
@@ -263,8 +266,12 @@ footer {
   padding-right: 5px;
 }
 
-.footer p {
-  color: white;
-  justify-content: space-evenly;
-}
+.fa-heart {
+  color: black;
+  animation: map 800ms infinite alternate;}
+  @keyframes map {
+    100% {
+    font-size: 1.05em;
+    }
+  }
 /*Fim Contato*/
