--- a/css/style.css
+++ b/css/style.css
@@ -234,10 +234,23 @@ footer {
 
 .footer ul {
   align-items: center;
+  display: grid;
+  justify-content: center;
+}
+
+@media (min-width: 560px) {
+  .footer ul {
+    grid-template-columns: 240px 240px;
+  }
+}
+
+@media (min-width: 880px) {
+  .footer ul {
+    grid-template-columns: repeat(3, 260px);
+  }
 }
 
 .footer li {
-  background-color:white;
   list-style: none;
 }
 
@@ -260,10 +273,8 @@ footer {
 .contact a:active,
 .contact a:hover {
   background-color: black;
-  border-radius: 20px;
+  border-radius: 10px;
   color: white;
-  padding-left: 5px;
-  padding-right: 5px;
 }
 
 .fa-heart {
